--- a/src/main/resources/templates/fragments/allegati.html
+++ b/src/main/resources/templates/fragments/allegati.html
@@ -55,13 +55,24 @@
 				</th:block>
 			</th:block>
 			<th:block th:if="${showOnly or enableField}">
-				<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
-					<div class="" th:unless="${__${wrapper}__.__${tipoAllegato}__.new}"><div class="value"><i class="fa fa-download"> </i> <a th:text="${__${wrapper}__.__${tipoAllegato}__.nomeFile}" th:href="@{|/file/${__${wrapper}__.__${tipoAllegato}__.id}|}"></a></div></div>
+               	<div class="col-lg-4 col-md-8 col-sm-8 col-xs-10" th:if="${showOnly}">
+			    	<div class="" th:unless="${__${wrapper}__.__${tipoAllegato}__.new}"><div class="value"><i class="fa fa-download"> </i> <a th:text="${__${wrapper}__.__${tipoAllegato}__.nomeFile}" th:href="@{|/file/${__${wrapper}__.__${tipoAllegato}__.id}|}"></a></div></div>
 					<div class="" th:if="${__${wrapper}__.__${tipoAllegato}__.new}"><div class="value danger" th:text="#{label.allegato_non_inserito}"></div></div>
+		        </div>
+		        <div class="col-lg-4 col-md-8 col-sm-8 col-xs-10" th:if="${enableField}">
+			    	<div class="" th:unless="${__${wrapper}__.__${tipoAllegato}__.new}"><div class="value-edit"><i class="fa fa-download"> </i> <a th:text="${__${wrapper}__.__${tipoAllegato}__.nomeFile}" th:href="@{|/file/${__${wrapper}__.__${tipoAllegato}__.id}|}"></a></div></div>
+					<div class="" th:if="${__${wrapper}__.__${tipoAllegato}__.new}"><div class="value-edit danger" th:text="#{label.allegato_non_inserito}"></div></div>
+		        </div>
+			    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12" th:if="${enableField}">
+			    	<div class="row">
+				    	<div class="col-xs-1">
+				            <input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${idField}" />
+				        </div>
+						<div class="col-xs-11">
+							<textarea th:field="${richiestaIntegrazioneWrapper.mappaNoteFieldEditabileAccreditamento[__${idField}	__]}"></textarea>
+						</div>
+					</div>
 				</div>
-				<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
-               		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${idField}" />
-               	</div>
 			</th:block>
 			<th:block th:if="${valutabile}">
 	        	<div class="margin-valutabile text-center col-lg-4 col-md-3 col-sm-7 col-xs-7">
