--- a/src/main/resources/templates/provider/providerFragment.html
+++ b/src/main/resources/templates/provider/providerFragment.html
@@ -69,15 +69,16 @@
 			                    </div>
 			           		</th:block>
 			           		<th:block th:if="${showOnly or enableField}">
-			           			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-10">
-			              			<div class="value" th:text="${providerWrapper.provider.tipoOrganizzatore.nome}"></div>
+			           			<div class="col-lg-4 col-md-8 col-sm-8 col-xs-10">
+			              			<div class="value-edit" th:if="${enableField}" th:text="${providerWrapper.provider.tipoOrganizzatore.nome}"></div>
+			              			<div class="value" th:if="${showOnly}" th:text="${providerWrapper.provider.tipoOrganizzatore.nome}"></div>
 		                    	</div>
-			           			<div class="col-lg-4 col-md-2 col-sm-6 col-xs-10">
+			           			<div class="col-lg-4 col-md-12 col-sm-12 col-xs-12" th:if="${enableField}">
 			                    	<div class="row">
-				                    	<div th:if="${enableField}" class="col-xs-1">
+				                    	<div class="col-xs-1">
 				                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.tipoOrganizzatore')}" />
 				                    	</div>
-										<div th:if="${enableField}" class="col-xs-11">
+										<div class="col-xs-11">
 											<textarea th:field="${richiestaIntegrazioneWrapper.mappaNoteFieldEditabileAccreditamento[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.tipoOrganizzatore')}__]}"></textarea>
 										</div>
 									</div>
@@ -112,7 +113,7 @@
 		                    <div th:if="${#fields.hasErrors('providerWrapper.provider.tipoOrganizzatore')}" class="alert" th:classappend="${valutabile} ? 'col-xs-12'" th:errors="${providerWrapper.provider.tipoOrganizzatore}"></div>
 	                    </div>
 
-	                    <div th:if="${valutabile}" class="divider"></div>
+	                    <div th:if="${valutabile or enableField}" class="divider"></div>
 
 	                    <!-- DENOMINAZIONE LEGALE -->
 						<div th:class="${valutabile ? 'item validateAlert form-group' : 'item form-group'}" th:classappend="${#fields.hasErrors('providerWrapper.provider.denominazioneLegale')} ? 'bad'">
@@ -128,21 +129,20 @@
 								</div>
 							</th:block>
 							<th:block th:if="${showOnly or enableField}">
-								<div class="col-lg-4 col-md-7 col-sm-7 col-xs-11">
-									<div class="value" th:text="${providerWrapper.provider.denominazioneLegale}"></div>
-								</div>
-
-			           			<div class="col-lg-4 col-md-2 col-sm-6 col-xs-10">
+								<div class="col-lg-4 col-md-8 col-sm-8 col-xs-10">
+			              			<div class="value-edit" th:if="${enableField}" th:text="${providerWrapper.provider.denominazioneLegale}"></div>
+			              			<div class="value" th:if="${showOnly}" th:text="${providerWrapper.provider.denominazioneLegale}"></div>
+		                    	</div>
+			           			<div th:if="${enableField}" class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
 			                    	<div class="row">
-				                    	<div th:if="${enableField}" class="col-xs-1">
+				                    	<div class="col-xs-1">
 				                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.denominazioneLegale')}" />
 				                    	</div>
-										<div th:if="${enableField}" class="col-xs-11">
+										<div class="col-xs-11">
 											<textarea th:field="${richiestaIntegrazioneWrapper.mappaNoteFieldEditabileAccreditamento[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.denominazioneLegale')}__]}"></textarea>
 										</div>
 									</div>
 								</div>
-
 							</th:block>
 							<th:block th:if="${valutabile}">
 		                    	<div class="margin-valutabile text-center col-lg-4 col-md-3 col-sm-7 col-xs-7">
@@ -173,7 +173,7 @@
 							<div th:if="${#fields.hasErrors('providerWrapper.provider.denominazioneLegale')}" class="alert" th:classappend="${valutabile} ? 'col-xs-12'" th:errors="${providerWrapper.provider.denominazioneLegale}"></div>
 						</div>
 
-						<div th:if="${valutabile}" class="divider"></div>
+						<div th:if="${valutabile or enableField}" class="divider"></div>
 
 						<!-- FLAG PARTITA IVA -->
 						<div class="item form-group" th:if="${editabile}">
@@ -211,12 +211,20 @@
 								</div>
 							</th:block>
 							<th:block th:if="${showOnly or enableField}">
-								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
-									<div class="value" th:text="${providerWrapper.provider.partitaIva}"></div>
-								</div>
-								<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
-		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.partitaIva')}" />
+		                    	<div class="col-lg-4 col-md-8 col-sm-8 col-xs-10">
+			              			<div class="value-edit" th:if="${enableField}" th:text="${providerWrapper.provider.partitaIva}"></div>
+			              			<div class="value" th:if="${showOnly}" th:text="${providerWrapper.provider.partitaIva}"></div>
 		                    	</div>
+			           			<div th:if="${enableField}" class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+			                    	<div class="row">
+				                    	<div class="col-xs-1">
+				                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.partitaIva')}" />
+				                    	</div>
+										<div class="col-xs-11">
+											<textarea th:field="${richiestaIntegrazioneWrapper.mappaNoteFieldEditabileAccreditamento[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.partitaIva')}__]}"></textarea>
+										</div>
+									</div>
+								</div>
 							</th:block>
 							<th:block th:if="${valutabile}">
 		                    	<div class="margin-valutabile text-center col-lg-4 col-md-3 col-sm-7 col-xs-7">
@@ -247,7 +255,7 @@
 							<div th:if="${#fields.hasErrors('providerWrapper.provider.partitaIva')}" class="alert" th:classappend="${valutabile} ? 'col-xs-12'" th:errors="${providerWrapper.provider.partitaIva}"></div>
 						</div>
 
-						<div th:if="${valutabile}" class="divider"></div>
+						<div th:if="${valutabile or enableField}" class="divider"></div>
 
 						<!-- CODICE FISCALE -->
 						<div th:class="${valutabile ? 'item validateAlert form-group' : 'item form-group'}" th:classappend="${#fields.hasErrors('providerWrapper.provider.codiceFiscale')} ? 'bad'">
@@ -264,12 +272,20 @@
 								</div>
 							</th:block>
 							<th:block th:if="${showOnly or enableField}">
-								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
-									<div class="value" th:text="${providerWrapper.provider.codiceFiscale}"></div>
+	                    		<div class="col-lg-4 col-md-8 col-sm-8 col-xs-10">
+			              			<div class="value-edit" th:if="${enableField}" th:text="${providerWrapper.provider.codiceFiscale}"></div>
+			              			<div class="value" th:if="${showOnly}" th:text="${providerWrapper.provider.codiceFiscale}"></div>
+		                    	</div>
+			           			<div th:if="${enableField}"  class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+			                    	<div class="row">
+				                    	<div class="col-xs-1">
+				                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.codiceFiscale')}" />
+				                    	</div>
+										<div class="col-xs-11">
+											<textarea th:field="${richiestaIntegrazioneWrapper.mappaNoteFieldEditabileAccreditamento[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.codiceFiscale')}__]}"></textarea>
+										</div>
+									</div>
 								</div>
-								<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
-	                    			<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.codiceFiscale')}" />
-	                    		</div>
 							</th:block>
 							<th:block th:if="${valutabile}">
 		                    	<div class="margin-valutabile text-center col-lg-4 col-md-3 col-sm-7 col-xs-7">
@@ -300,7 +316,7 @@
 							<div th:if="${#fields.hasErrors('providerWrapper.provider.codiceFiscale')}" class="alert" th:classappend="${valutabile} ? 'col-xs-12'" th:errors="${providerWrapper.provider.codiceFiscale}"></div>
 						</div>
 
-						<div th:if="${valutabile}" class="divider"></div>
+						<div th:if="${valutabile or enableField}" class="divider"></div>
 
 						<!-- RAGIONE SOCIALE -->
 						<div th:class="${valutabile ? 'item validateAlert form-group' : 'item form-group'}" th:classappend="${#fields.hasErrors('providerWrapper.provider.ragioneSociale')} ? 'bad'">
@@ -330,12 +346,20 @@
 			                    </div>
 			             	</th:block>
 			             	<th:block th:if="${showOnly or enableField}">
-			             		<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
-			                    	<div class="value" th:text="${providerWrapper.provider.ragioneSociale}"></div>
-			                   	</div>
-			                   	<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
-	                    			<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.ragioneSociale')}" />
-	                    		</div>
+	                    		<div class="col-lg-4 col-md-8 col-sm-8 col-xs-10">
+			              			<div class="value-edit" th:if="${enableField}" th:text="${providerWrapper.provider.ragioneSociale}"></div>
+			              			<div class="value" th:if="${showOnly}" th:text="${providerWrapper.provider.ragioneSociale}"></div>
+		                    	</div>
+			           			<div th:if="${enableField}" class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+			                    	<div class="row">
+				                    	<div class="col-xs-1">
+				                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.ragioneSociale')}" />
+				                    	</div>
+										<div class="col-xs-11">
+											<textarea th:field="${richiestaIntegrazioneWrapper.mappaNoteFieldEditabileAccreditamento[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.ragioneSociale')}__]}"></textarea>
+										</div>
+									</div>
+								</div>
 							</th:block>
 							<th:block th:if="${valutabile}">
 		                    	<div class="margin-valutabile text-center col-lg-4 col-md-3 col-sm-7 col-xs-7">
@@ -366,7 +390,7 @@
 							<div th:if="${#fields.hasErrors('providerWrapper.provider.ragioneSociale')}" class="alert" th:classappend="${valutabile} ? 'col-xs-12'" th:errors="${providerWrapper.provider.ragioneSociale}"></div>
 						</div>
 
-						<div th:if="${valutabile}" class="divider"></div>
+						<div th:if="${valutabile or enableField}" class="divider"></div>
 
 						 <!-- EMAIL STRUTTURA -->
 						<div th:class="${valutabile ? 'item validateAlert form-group' : 'item form-group'}" th:classappend="${#fields.hasErrors('providerWrapper.provider.emailStruttura')} ? 'bad'">
@@ -382,12 +406,20 @@
 								</div>
 							</th:block>
 							<th:block th:if="${showOnly or enableField}">
-								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
-									<div class="value" th:text="${providerWrapper.provider.emailStruttura}"></div>
+	                    		<div class="col-lg-4 col-md-8 col-sm-8 col-xs-10">
+			              			<div class="value-edit" th:if="${enableField}" th:text="${providerWrapper.provider.emailStruttura}"></div>
+			              			<div class="value" th:if="${showOnly}" th:text="${providerWrapper.provider.emailStruttura}"></div>
+		                    	</div>
+			           			<div th:if="${enableField}" class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+			                    	<div class="row">
+				                    	<div class="col-xs-1">
+				                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.emailStruttura')}" />
+				                    	</div>
+										<div class="col-xs-11">
+											<textarea th:field="${richiestaIntegrazioneWrapper.mappaNoteFieldEditabileAccreditamento[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.emailStruttura')}__]}"></textarea>
+										</div>
+									</div>
 								</div>
-								<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
-	                    			<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.emailStruttura')}" />
-	                    		</div>
 							</th:block>
 							<th:block th:if="${valutabile}">
 		                    	<div class="margin-valutabile text-center col-lg-4 col-md-3 col-sm-7 col-xs-7">
@@ -419,7 +451,7 @@
 						</div>
 
 						<div th:if="${editabile}" class="divider-dashed"></div>
-						<div th:if="${valutabile}" class="divider"></div>
+						<div th:if="${valutabile or enableField}" class="divider"></div>
 
 						<!-- NATURA ORGANIZZAZIONE -->
 						<div th:class="${valutabile ? 'item validateAlert form-group' : 'item form-group'}" th:classappend="${#fields.hasErrors('providerWrapper.provider.naturaOrganizzazione')} ? 'bad'">
@@ -445,12 +477,20 @@
 								</div>
 							</th:block>
 							<th:block th:if="${showOnly or enableField}">
-								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11" id="naturaOrganizzazione">
-									<div class="value" th:text="${providerWrapper.provider.naturaOrganizzazione}"></div>
+	                    		<div class="col-lg-4 col-md-8 col-sm-8 col-xs-10">
+			              			<div class="value-edit" th:if="${enableField}" th:text="${providerWrapper.provider.naturaOrganizzazione}"></div>
+			              			<div class="value" th:if="${showOnly}" th:text="${providerWrapper.provider.naturaOrganizzazione}"></div>
+		                    	</div>
+			           			<div th:if="${enableField}" class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+			                    	<div class="row">
+				                    	<div class="col-xs-1">
+				                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.naturaOrganizzazione')}" />
+				                    	</div>
+										<div class="col-xs-11">
+											<textarea th:field="${richiestaIntegrazioneWrapper.mappaNoteFieldEditabileAccreditamento[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.naturaOrganizzazione')}__]}"></textarea>
+										</div>
+									</div>
 								</div>
-								<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
-	                    			<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.naturaOrganizzazione')}" />
-	                    		</div>
 							</th:block>
 							<th:block th:if="${valutabile}">
 		                    	<div class="margin-valutabile text-center col-lg-4 col-md-3 col-sm-7 col-xs-7">
@@ -482,7 +522,7 @@
 						</div>
 
 						<div th:if="${editabile}" class="divider-dashed"></div>
-						<div th:if="${valutabile}" class="divider"></div>
+						<div th:if="${valutabile or enableField}" class="divider"></div>
 
 						<!-- NO PROFIT -->
 						<div th:class="${valutabile ? 'item validateAlert form-group' : 'item form-group'}" th:classappend="${#fields.hasErrors('providerWrapper.provider.noProfit')} ? 'bad'">
@@ -508,12 +548,20 @@
 								</div>
 							</th:block>
 							<th:block th:if="${showOnly or enableField}">
-								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11" id="noProfit">
-									<div class="value" th:text="${providerWrapper.provider.noProfit ? #messages.msg('label.sì') : #messages.msg('label.no')}"></div>
+	                    		<div class="col-lg-4 col-md-8 col-sm-8 col-xs-10">
+									<div class="value-edit" th:if="${enableField}" th:text="${providerWrapper.provider.noProfit ? #messages.msg('label.sì') : #messages.msg('label.no')}"></div>
+									<div class="value" th:if="${showOnly}" th:text="${providerWrapper.provider.noProfit ? #messages.msg('label.sì') : #messages.msg('label.no')}"></div>
 								</div>
-								<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
-	                    			<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.noProfit')}" />
-	                    		</div>
+			           			<div th:if="${enableField}" class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+			                    	<div class="row">
+				                    	<div class="col-xs-1">
+				                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.noProfit')}" />
+				                    	</div>
+										<div class="col-xs-11">
+											<textarea th:field="${richiestaIntegrazioneWrapper.mappaNoteFieldEditabileAccreditamento[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.noProfit')}__]}"></textarea>
+										</div>
+									</div>
+								</div>
 							</th:block>
 							<th:block th:if="${valutabile}">
 		                    	<div class="margin-valutabile text-center col-lg-4 col-md-3 col-sm-7 col-xs-7">
