--- a/src/main/resources/templates/accreditamento/datiAccreditamentoValidate.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoValidate.html
@@ -37,7 +37,9 @@
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h2 th:text="#{label.valutazione} + ' ' + #{label.dati_attività}">Dati relativi all’attività</h2>
+						<h2 th:if="${datiAccreditamentoWrapper.sezione == 1}" th:text="#{label.valutazione} + ' ' + #{label.tipologia_formativa}">Dati relativi all’attività</h2>
+						<h2 th:if="${datiAccreditamentoWrapper.sezione == 2}" th:text="#{label.valutazione} + ' ' + #{label.dati_economici}">Dati relativi all’attività</h2>
+						<h2 th:if="${datiAccreditamentoWrapper.sezione == 3}" th:text="#{label.valutazione} + ' ' + #{label.dati_struttura}">Dati relativi all’attività</h2>
 						<div class="pull-right buttons-header">
 							<label th:if="${canValutaDomanda}" class="btn btn-success pull-right" th:text="#{label.salva}" for="submitButton"></label>
 							<button class="btn btn-primary pull-right" th:text="#{label.tutte_le_valutazioni}" data-toggle="modal" data-target=".modal-altreValutazioni"></button>
