--- a/src/main/resources/templates/fragments/modaleStoricoValutazioni.html
+++ b/src/main/resources/templates/fragments/modaleStoricoValutazioni.html
@@ -76,7 +76,7 @@
 				                   	{"targets": [ '_all' ], "orderable": false },
 				                    {"targets": 3, "orderable": false, "width": "1px"},
 				                  ],
-				    "order": [[ 0, 'asc' ], [ 1, 'asc' ]],
+				    "order": [ 2, 'asc' ],
 				});
 
 			})
