--- a/src/main/resources/templates/accreditamento/accreditamentoValidate.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoValidate.html
@@ -251,7 +251,15 @@
 										and accreditamentoWrapper.accreditamento.isValutazioneSulCampo()
 										and accreditamentoWrapper.accreditamento.isStandard()}">
 
-										<div>TODO show modello pdf creato da Barduz</div>
+										<div class="item form-group">
+											<div class="col-lg-1 col-xs-12"></div>
+											<label class="control-label col-lg-3 col-md-4 col-sm-4 col-xs-7">
+												<span th:text="#{label.scarica_pdf_verbale}"></span>
+											</label>
+											<a class="btn btn-primary" th:text="#{label.genera_file}" ></a>
+										</div>
+
+										<div class="divider"></div>
 
 										<div class="item form-group" th:classappend="${#fields.hasErrors('accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf')} ? 'bad'">
 											<div class="col-lg-1 col-xs-12"></div>
